--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-native": "0.75.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.3",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
