--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
@@ -19,8 +20,6 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-native": "0.75.4",
-    "react-native-fs": "^2.20.0",
-    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.1",
